@@ -793,10 +793,12 @@ local function GetFromMenu (macrolist)
       descr = ("< No description: Id=%d >"):format(macro.id)
     end
     local ch = i<10 and i or i<36 and string.char(i+55)
-    menuitems[i] = { text = ch and ("&"..ch..". "..descr) or descr }
+    menuitems[i] = { text = ch and (ch..". "..descr) or descr }
   end
 
-  local props, bkeys = {Title=Msg.UtExecuteMacroTitle,Bottom=Msg.UtExecuteMacroBottom}, {{BreakKey="A+F4"}}
+  local props, bkeys =
+    { Title=Msg.UtExecuteMacroTitle, Bottom=Msg.UtExecuteMacroBottom, Flags="FMENU_AUTOHIGHLIGHT" },
+    { {BreakKey="A+F4"} }
   while true do
     local item, pos = far.Menu(props, menuitems, bkeys)
     if not item then
