@@ -1,4 +1,9 @@
-﻿shmuel 16.06.2015 12:37:41 +0200 - build 517
+﻿shmuel 16.06.2015 14:16:24 +0200 - build 518
+
+1. Продолжение 516: если пользователь назначил свой хоткей, то он имеет преимущество перед
+   автоматически назначаемым.
+
+shmuel 16.06.2015 12:37:41 +0200 - build 517
 
 1. Вместо локальной переменной 'status' использовалась глобальная.
 
